--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.6",
