--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
+    "ipware": "^2.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
